Fix LoadingWave layout bug with iOS

--- a/src/styles/constant.scss
+++ b/src/styles/constant.scss
@@ -32,5 +32,6 @@ $font-family: "Noto Sans TC", "Microsoft JhengHei", "sans-serif";
 	-webkit-transform: $effct;
 	-moz-transform: $effct;
 	-ms-transform: $effct;
+	-o-transform: $effct;
 	transform: $effct;
 }
